added endpoint to manage label permissions
